--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,10 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* Changed 'div' to 'nav' element to match HTML doc */
+.header nav{
+    display: flex;
+    flex-direction: row;
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +35,13 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+/* Changed 'div' to 'nav' element to match HTML doc */
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/* Changed 'div' to 'nav' element to match HTML doc */
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
