Completed putting all heading tags in sequential order

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ a {
 p {
     font-size: 16px;
 }
+
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -200,8 +201,7 @@ p {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-}
-
-.footer h2 {
+    /* Added font-size for footer text */
     font-size: 20px;
 }
+
