Condensed and organized selectors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,10 +13,6 @@ a {
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-}
-
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,7 +20,7 @@ p {
     color: #ffffff;
 }
 
-.header h1 {
+.header h1 { 
     display: inline-block;
     font-size: 48px;
 }
@@ -56,8 +52,6 @@ p {
     margin-left: 25px;
 }
 
-
-
 .hero {
     height: 800px;
     width: 100%;
@@ -81,6 +75,8 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    /* Added font-size to condense code */
+    font-size: 16px;
 }
 
 .benefits {
@@ -94,55 +90,27 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+/* Created icons class to condense 'benefit-lead' benefit-brand' and 'benefit-cost' classes. */
+.icons{
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+/* Condensed all combo 'benefit- h3' classes into 'icons h3' */
+.icons h3{
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/* Condensed all combo 'benefit- img' classes into 'icons img' */
+.icons img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+/* Created services class to condense */
+.services {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -151,47 +119,13 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+/* Created to condense */
+.services img{
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+/* Created to condense */
+.services h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
