--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ a {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
+    /* Corrected typo in image path */
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
